--- a/ru/_theme/phalcon-ru/layout.html
+++ b/ru/_theme/phalcon-ru/layout.html
@@ -16,7 +16,7 @@
           {%- if not loop.first %}{{ reldelim2 }}{% endif %}</li>
         {%- endfor %}
         {%- block rootrellink %}
-        <li><a href="http://www.phalconphp.com">Home</a> &raquo;</li>
+        <li><a href="http://www.phalconphp.ru">Русский сайт</a> &raquo;</li>
         <li><a href="{{ pathto(master_doc) }}">{{ shorttitle|e }}</a>{{ reldelim1 }}</li>
         {%- endblock %}
         {%- for parent in parents %}
@@ -57,16 +57,16 @@
           {%- block sidebarsearch %}
           {%- if pagename != "search" %}
             {% if versions %}
-                <h3>Project Versions</h3>
+                <h3>Версия проекта</h3>
 
                 <select name="versions" id="versions">
             {% for slug, url in versions %}
-            <option value="http://docs.phalconphp.com{{ url }}">{{ slug }}</option>
+            <option value="http://docs.phalconphp.ru{{ url }}">{{ slug }}</option>
             {% endfor %}
                 </select>
             {% endif %}
             <div id="searchbox" style="">
-              <h3>Search</h3>
+              <h3>Поиск</h3>
                 <form class="search" action="http://readthedocs.org/search/project/" method="get">
                   <input type="text" name="q" size="18">
                   <input type="submit" value="Go">
@@ -109,10 +109,10 @@
       {%- endif %}{% endif %}
 {%- endmacro %}
 
-<html lang="en">
+<html lang="ru">
   <head>
     {% if sourcename == "error.txt" %}
-    <base href="http://phalconphp.com/">
+    <base href="http://phalconphp.ru/">
     {% endif %}
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     {{ metatags }}
@@ -185,20 +185,19 @@
     <div id="wrapper">
 
       <div id="header">
-        <h1><a href="http://phalconphp.com/index" ><img border="0" src="{{ pathto('_static/img/logo-small.png', 1) }}"></a></h1>
-        <div align="center">
-          <div id="nav-main" role="navigation">
-            <div class="menubar">
-              <div class="nav-main-features nav-first"><a href="http://phalconphp.com/index" >HOME</a></div>
-              <div class="nav-main-features nav-first"><a href="http://phalconphp.com/download" >DOWNLOAD</a></div>
-              <div class="nav-main-features"><a href="http://docs.phalconphp.com" >DOCUMENTATION</a></div>
-              <div class="nav-main-features"><a href="http://phalconphp.com/support" >SUPPORT</a></div>
-              <div class="nav-main-features nav-first"><a href="https://github.com/phalcon/cphalcon">GITHUB</a></div>
-              <div class="nav-main-features"><a target="blog" href="http://blog.phalconphp.com/">BLOG</a></div>
-            </div>
+        <h1><a href="http://phalconphp.ru/index" ><img border="0" src="{{ pathto('_static/img/logo-small.png', 1) }}"></a></h1>
+          <div align="center">
+              <div id="nav-main" role="navigation">
+                  <div class="menubar">
+                      <div class="nav-main-features nav-first"><a href="http://phalconphp.com/">ОФИЦИАЛЬНЫЙ САЙТ</a></div>
+                      <div class="nav-main-features"><a href="http://phalconphp.ru/download">СКАЧАТЬ</a></div>
+                      <div class="nav-main-features"><a href="http://phalconphp.ru/documentation">ДОКУМЕНТАЦИЯ</a></div>
+                      <div class="nav-main-features"><a href="http://phalconphp.ru/support">ПОДДЕРЖКА</a></div>
+                      <div class="nav-main-features"><a href="https://github.com/phalcon/cphalcon">GITHUB</a></div>
+                      <div class="nav-main-features"><a target="blog" href="http://blog.phalconphp.com/">БЛОГ</a></div>
+                  </div>
+              </div>
           </div>
-        </div>
-      </div>
 
       {%- block header %}{% endblock %}
 
@@ -234,18 +233,19 @@
       {%- block footer %}
         <div id="footer">
 
-          <p>Found a typo or an error? Want to improve this document? The documentation sources are available on <a href="http://github.com/phalcon/docs">Github</a></p>
-          <p>Need support or have questions? Check our <a href="http://phalconphp.com/support">Support Page</a></p>
+            <p>Нашли ошибку или опечатку? Желаете улучшить этот документ? Исходники русской документации доступны на <a href="https://github.com/xboston/phalcon-docs">Github</a>
+                и <a href="http://github.com/phalcon/docs">оригинальная версия на Github</a></p>
+          <p>Нажна помощь или возникли вопросы? Посетите <a href="http://phalconphp.ru/support">страницу помощи</a></p>
 
-          <p>The Phalcon PHP Framework is released under the <a href="https://github.com/phalcon/cphalcon/blob/master/docs/LICENSE.md">new BSD license</a>.</p>
-          <p>Except where otherwise noted, content on this site is licensed under the
+          <p>Фреймворк Phalcon PHP распространяется с учетом <a href="https://github.com/phalcon/cphalcon/blob/master/docs/LICENSE.md">new BSD license</a>.</p>
+          <p>Кроме случаев, когда указано иное, содержимое на этом сайте, защищено в соответствии с 
             <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 License.</a></p>
 
           {%- if last_updated %}
-             {% trans last_updated=last_updated|e %}Last updated on {{ last_updated }}.{% endtrans %}
+             {% trans last_updated=last_updated|e %}Последнее обновление {{ last_updated }}.{% endtrans %}
           {%- endif %}
           {%- if show_sphinx %}
-            {% trans sphinx_version=sphinx_version|e %}Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> {{ sphinx_version }}.{% endtrans %}
+            {% trans sphinx_version=sphinx_version|e %}Создано с использованием <a href="http://sphinx.pocoo.org/">Sphinx</a> {{ sphinx_version }}.{% endtrans %}
           {%- endif %}
 
           <p>
