--- a/ru/_theme/phalcon-ru/layout.html
+++ b/ru/_theme/phalcon-ru/layout.html
@@ -198,7 +198,8 @@
                   </div>
               </div>
           </div>
-
+      </div>
+          
       {%- block header %}{% endblock %}
 
       {%- block relbar1 %}{{ relbar() }}{% endblock %}
